syntax = "proto3";

package yandex.cloud.priv.cic.v1.inner.service;

import "yandex/cloud/api/operation.proto";
import "google/protobuf/field_mask.proto";

import "yandex/cloud/priv/operation/operation.proto";
import "yandex/cloud/priv/validation.proto";

import "yandex/cloud/priv/cic/v1/inner/service/trunk_connection.proto";
import "yandex/cloud/priv/cic/v1/inner/inventory/l2_ext_params.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/cic/v1/inner/service;cic";
option java_outer_classname = "CICTCS";

service TrunkConnectionService {

  rpc Get (GetTrunkConnectionRequest) returns (TrunkConnection);

  rpc List (ListTrunkConnectionRequest) returns (ListTrunkConnectionResponse);

  rpc Create (TrunkConnection) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "CreateTrunkConnectionMetadata"
      response: "TrunkConnection"
    };
  }

  rpc Update (TrunkConnection) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "UpdateTrunkConnectionMetadata"
      response: "TrunkConnection"
    };
  }

  rpc UpdateByMask (UpdateTrunkConnectionRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "UpdateTrunkConnectionMetadata"
      response: "TrunkConnection"
    };
  }

  rpc Delete (DeleteTrunkConnectionRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "DeleteTrunkConnectionMetadata"
      response: "google.protobuf.Empty"
    };
  }

  rpc ListOperations (ListTrunkConnectionOperationsRequest) returns (ListTrunkConnectionOperationsResponse);
}

message GetTrunkConnectionRequest {
  string trunk_connection_id = 1 [(required) = true, (length) = "<=50"];
}

message ListTrunkConnectionRequest {
  string folder_id = 1 [(required) = true, (length) = "<=50"];
  int64 page_size = 2;
  string page_token = 3;
  string filter = 4;
}

message ListTrunkConnectionResponse {
  repeated TrunkConnection trunk_connections = 1;
  string next_page_token = 2;
}

message UpdateTrunkConnectionRequest {
  string trunk_connection_id = 1;
  google.protobuf.FieldMask update_mask = 2;

  string name = 3;
  string description = 4;
  string cloud_id = 5;
  string folder_id = 6;
  string region_id = 7;
  int64 bandwidth_mbps = 8;
  oneof optional_bandwidth_pps {
    int64 bandwidth_pps = 9;
  }

  oneof joint {
    TrunkConnection.SinglePortDirectJoint single_port_direct_joint = 10;
    TrunkConnection.LagDirectJoint lag_direct_joint = 11;
    TrunkConnection.PartnerJointInfo partner_joint_info = 12;
  }

  oneof optional_point_of_presence_id {
    string point_of_presence_id = 13;
  }

  oneof optional_cluster_id {
    string cluster_id = 14;
  }

  oneof topology_specific {
    inventory.L2ExtParams l2ext = 15;
  }

  string customer_name = 16;
}

message CreateTrunkConnectionMetadata {
  string trunk_connection_id = 1;
}

message UpdateTrunkConnectionMetadata {
  string trunk_connection_id = 1;
}

message DeleteTrunkConnectionRequest {
  string trunk_connection_id = 1 [(required) = true, (length) = "<=50"];
}

message DeleteTrunkConnectionMetadata {
  string trunk_connection_id = 1;
}

message ListTrunkConnectionOperationsRequest {
  string trunk_connection_id = 1 [(required) = true, (length) = "<=50"];
  int64 page_size = 2;
  string page_token = 3;
}

message ListTrunkConnectionOperationsResponse {
  repeated operation.Operation operations = 1;
  string next_page_token = 2;
}
